@@ -10,11 +10,12 @@ import javax.annotation.Nullable;
 import javax.lang.model.element.*;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
-public class EntityUtils {
+public final class EntityUtils {
 
-    private final static SnakeCaseNameConverter defaultColumnNameConverter = new SnakeCaseNameConverter();
+    private EntityUtils() { }
+
+    public final static SnakeCaseNameConverter DEFAULT_COLUMN_NAME_CONVERTER = new SnakeCaseNameConverter();
 
     public static String parseColumnName(VariableElement element, @Nullable NameConverter columnsNameConverter) {
         var column = CommonUtils.findDirectAnnotation(element, DbUtils.COLUMN_ANNOTATION);
@@ -27,8 +28,9 @@ public class EntityUtils {
                 .map(Object::toString)
                 .get();
         }
+
         return columnsNameConverter == null
-            ? defaultColumnNameConverter.convert(fieldName)
+            ? DEFAULT_COLUMN_NAME_CONVERTER.convert(fieldName)
             : columnsNameConverter.convert(fieldName);
     }
 
@@ -38,16 +40,19 @@ public class EntityUtils {
             .filter(e -> e.getKind() == ElementKind.CONSTRUCTOR)
             .map(ExecutableElement.class::cast)
             .filter(e -> e.getModifiers().contains(Modifier.PUBLIC))
-            .collect(Collectors.toList());
+            .toList();
+
         if (constructors.isEmpty()) {
             throw new ProcessingErrorException(List.of(new ProcessingError("Entity type " + type + " has no public constructors", type)));
         }
         if (constructors.size() == 1) {
             return constructors.get(0);
         }
+
         var entityConstructors = constructors.stream()
             .filter(c -> CommonUtils.findDirectAnnotation(c, DbUtils.ENTITY_CONSTRUCTOR_ANNOTATION) != null)
-            .collect(Collectors.toList());
+            .toList();
+
         if (entityConstructors.isEmpty()) {
             throw new ProcessingErrorException(List.of(new ProcessingError("Entity type " + type + " has more than one public constructor and none of them is marked with @EntityConstructor", type)));
         }
